# cefi

./: .gitignore  CHANGELOG.md  README.md  README.rst  pyproject.toml
.github/: .pre-commit-config.yaml  dependabot.yml  renovate.json
.github/workflows/: 👷Flow.yml
.github/workflows/archive/: ⛙Automerge.yml  🐍Build.yml  🔏Security.yml.archive  🦎build_dev.yml.archive  🧪test.yml.archive
.requirements/: requirements.txt
cefi/: __init__.py  config.py  default_settings.toml  main.py
cefi/handler/: __init__.py  _client.py  capitalcom.py  ccxt.py  client.py  ctrader.py  degiro.py  etoro.py  etrade.py  fixapi.py  fxcm.py  ib_sync.py  ibkr.py  ig.py  metatrader.py  ninjatrader.py  oanda.py  schwab.py  sierrachart.py  thinkorswim.py  tradestation.py  tradingview.py
cefi/protocol/: __init__.py  capitalcom.py  ccxt.py  client.py  ib_sync.py
cex/: __init__.py  default_settings.toml
docs/: 01_start.rst  02_config.rst  03_module.rst  conf.py  index.rst
docs/_static/: custom.css
examples/: example.py
tests/: test_unit.py  test_unit_exception.py
