[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "cefi"
version = "7.0.4"
description = "A python library, to interact  with Crypto Exchanges (CCXT library) and brokers (IB & Capital.com)"
authors = [
  { name = "mraniki", email = "8766259+mraniki@users.noreply.github.com" },
]
license = "MIT"
readme = "README.md"
keywords = ["cex, cefi, crypto, exchange, broker"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
  "dynaconf>=3.1.12",
  "loguru>=0.6",
  "ccxt>=4.2.80",
  "capitalcom-python==0.2.3",
  "degiro-connector==3.0.29",
  'easyoanda==1.0.19; python_version >= "3.11" and python_version < "4.0"',
  "ibind==0.1.14",
  # "ib_insync = \"0.9.86\"",
  # "mt5linux = \"0.1.9\"",
  "mt5linux_updated==0.0.1",
  # "pyetrade = {version =\"2.1.0\"}",
]


[project.urls]
"Homepage" = "https://github.com/mraniki/cefi"
"Changelog" =  "https://github.com/mraniki/cefi/blob/dev/CHANGELOG.rst"
"Support" =  "https://github.com/mraniki/cefi/discussions"
"Issues" =  "https://github.com/mraniki/cefi/issues"


[project.optional-dependencies]
dev = [
  "python-semantic-release>=8.0.8",
  "ruff~=0.11",
  "pre-commit~=4.0",
]
test = [
  "pytest~=8.0",
  "pytest-cov~=6.0",
  "pytest-asyncio>=0.26,<2.0",
  "pytest-mock~=3.11",
  "pytest-loguru~=0.4",
]
docs = [
  "sphinx==7.4.7",
  "pydata-sphinx-theme~=0.14",
  "sphinx-hoverxref~=1.3",
  "sphinx_copybutton==0.5.2",
  "myst_parser~=4.0",
  "sphinx_design~=0.6",
]

[tool.setuptools.packages.find]
where = ["."] 
include = ["cefi*"] 
exclude = ["tests*", "docs*", "examples*"]

[tool.ruff]
exclude = [
  ".github/*",
  "docs/*",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "W"
]

fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"

[tool.pylint.exceptions]
overgeneral-exceptions = [
    "builtins.BaseException",
    "builtins.Exception",
    "builtins.RuntimeError",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"
python_classes = "Test*"
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
addopts = """
-v
--show-capture=stderr
"""
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
    "tests/*",
    "examples/*",
    "docs/*",
    "*/config.py"
]

[tool.bandit]
exclude_dirs = ["tests","docs"]
skips = ["B101","B104"]

[tool.semantic_release]
upload_to_vcs_release = true
version_variables = ["cefi/__init__.py:__version__"]
commit_parser = "emoji"
version_toml = [
   "pyproject.toml:project.version",
]

[tool.semantic_release.commit_parser_options]
major_tags = [
    "BREAKING",
    "ðŸ’¥",
    ":boom:",
  ]
minor_tags = ["feat",
    "ðŸ¥š",":egg:",
    "ðŸš€",":rocket:",
    "ðŸ’„",":lipstick:",
    "âœ¨",":sparkles:",
]

patch_tags = ["fix","bump","Update",
    "ðŸŽ¨",":art:",
    "ðŸ›",":bug:",
    "ðŸš‘",":ambulance:",
    "âš¡",":zap:",
    "ðŸ”¥",":fire:",
    "ðŸš¨",":rotating_light:",
    "â™»ï¸",":recycle:",
    "ðŸ”§",":wrench:",
    "â¬†ï¸",":arrow_up:",
    "ðŸ©¹",":adhesive_bandage:",
    "ðŸ‘·",":construction_worker:",
    "ðŸ“",":memo:",
    "ðŸ”’",":lock:",
    "ðŸ‘½",":alien:",
    "ðŸ’¬",":speech_balloon:",
    "ðŸ¥…",":goal_net:",
    "âœ…",":white_check_mark:",
    "ðŸ³",":whale:",
    "ðŸ™ˆ",":see_no_evil:",
    "âš—ï¸",":alembic:",
    "ðŸ§",":monocle_face:",
    "ðŸ”‡",":mute:",
    "ðŸ”Š",":volume:",
]

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.branches.main]
match = "(main|master|dev)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
